src/components/FantasyFootball/index.css
.fantasy-page-header{
  background: white;
  background-image: url('https://vcore.com/wp-content/uploads/2017/09/football.jpeg');
  background-size: 100% 100%;
  background-repeat: no-repeat;
  height: 420px;
  clip-path: polygon(51% 0, 100% 0, 100% 100%, 50% 80%, 0 100%, 0 0);

}
.ff-title{
  color: seagreen;
  text-align: left;
  padding-top: 7%;
  margin-left: 30%;
  font-weight: bolder;
  font-family: 'Satisfy', sans-serif;
  font-size: 89px;
  text-shadow: 4px 3px 0px black, 9px 8px 0px rgba(255,255,255,0.25);
  overflow-x: hidden;
}
.ff-intro{
  height: 390px;
  background: white;
  clip-path: polygon(50% 2%, 100% 21%, 100% 100%, 51% 100%, 0 100%, 0 21%);
}
.ff-intro-box{
  position: absolute;
  font-size: 24px;
  width: 83%;
  margin-left: 8%;
  margin-top: 8%;
  padding: 1.5%;
  text-align: center;
  overflow-x: hidden;
}
.ff-nav{
  position: absolute;
  margin-top: 21%;
  margin-left: 24%;
  width: 100%;
  overflow: hidden;
}
.ff-nav-btn{
  font-family: 'Satisfy', sans-serif;
  color: seagreen;
  display: inline-block;
  font-weight: 600;
  font-size: 28px;
  padding: 1%;
  transition: .35s ease-in-out;
  cursor: pointer;
}
.ff-nav-btn:hover{
  color: gold;
}
.ff-rankings-section{
  height: 600px;
  width: 100%;
  background-color: seagreen;
  overflow-x: hidden;
}
.ff-waivers-section{
  height: 600px;
  background-color: white;
  overflow-x: hidden;
  width: 100%;
}
.ff-trades-section{
  height: 600px;
  background-color: seagreen;
  overflow-x: hidden;
  width: 100%;
}
.ff-daily-section{
  height: 600px;
  background-color: white;
  overflow-x: hidden;
  width: 100%;
}
.ff-section-title#greenbg{
  color: white;
  text-align: left;
  padding-top: 3%;
  margin-left: 10%;
  font-weight: bolder;
  font-family: 'Satisfy', sans-serif;
  font-size: 56px;
  text-shadow: 4px 3px 0px seagreen, 9px 8px 0px rgba(0,0,0,0.25);
}
.ff-section-title#whitebg{
  color: seagreen;
  text-align: left;
  padding-top: 3%;
  margin-left: 10%;
  font-weight: bolder;
  font-family: 'Satisfy', sans-serif;
  font-size: 56px;
  text-shadow: 4px 3px 0px #fff, 9px 8px 0px rgba(0,0,0,0.15);
}

